# flecsolve

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.gitlab/: build_and_test.cmake  build_and_test.sh  common.yml  environments.yml  kessel.sh  templates.yml
.kessel/workflows/: cdash.py  cmake.py
app/: CMakeLists.txt
app/chems/: CMakeLists.txt
app/chems/include/: chems.hh
app/chems/src/: main.cc
app/diffusion/: CMakeLists.txt  diffusion.cfg
app/diffusion/include/: diffusion.hh  parameters.hh  state.hh
app/diffusion/src/: main.cc
app/equilibrium_diffusion/: CMakeLists.txt  diffusion.cfg
app/equilibrium_diffusion/include/: equilibrium_diffusion.hh  parameters.hh  state.hh
app/equilibrium_diffusion/src/: main.cc
app/heat_eqn/: CMakeLists.txt  heateqn.cfg
app/heat_eqn/include/: heat_eqn.hh  parameters.hh  state.hh
app/heat_eqn/src/: main.cc
cmake/: flecsi-linalgConfig.cmake.in  flecsolveConfig.cmake.in
config/: flecsolveConfig.cmake.in  format-flecsolve.cmake
examples/: CMakeLists.txt
examples/equilibrium_diffusion/: CMakeLists.txt  README.md  diffusion.cfg
examples/equilibrium_diffusion/include/: equilibrium_diffusion.hh
examples/equilibrium_diffusion/src/: main.cc
examples/heat_equation/: CMakeLists.txt  README.md  control.hh  explicit.cc  explicit.cfg  heat.cc  heat.hh  implicit.cc  implicit.cfg  index_util.hh  mesh.hh
examples/heat_equation/util/: anim.py  vtk.py
examples/poisson/: CMakeLists.txt  control.hh  index_util.hh  mesh.hh  poisson.cc  poisson.cfg  poisson.hh
flecsi-linalg/: CMakeLists.txt
flecsi-linalg/discrete_operators/: CMakeLists.txt
flecsi-linalg/discrete_operators/boundary/: dirichlet.hh  neumann.hh
flecsi-linalg/discrete_operators/common/: operator_base.hh  operator_utils.hh  state_store.hh
flecsi-linalg/discrete_operators/expressions/: operator_expression.hh
flecsi-linalg/discrete_operators/specializations/: operator_mesh.hh
flecsi-linalg/discrete_operators/tasks/: operator_task.hh
flecsi-linalg/discrete_operators/test/: boundaries.cc  multivector_operator.cc
flecsi-linalg/discrete_operators/utils/: operator_utils.hh
flecsi-linalg/discrete_operators/volume_diffusion/: volume_diffusion.hh
flecsi-linalg/operators/: CMakeLists.txt  bicgstab.hh  cg.hh  factory.hh  gmres.hh  krylov_interface.hh  pcg.hh  shell.hh  shell_operator.hh  solver_settings.hh
flecsi-linalg/operators/test/: bicgstab.cc  cg.cc  cgmulti.cc  csr_utils.hh  gmres.cc  test_mesh.hh
flecsi-linalg/physics/boundary/: dirichlet.hh  neumann.hh
flecsi-linalg/physics/common/: operator_base.hh  operator_utils.hh  state_store.hh
flecsi-linalg/physics/expressions/: operator_expression.hh
flecsi-linalg/physics/specializations/: operator_mesh.hh
flecsi-linalg/physics/tasks/: operator_task.hh
flecsi-linalg/physics/test/: boundaries.cc
flecsi-linalg/physics/volume_diffusion/: volume_diffusion.hh
flecsi-linalg/solvers/: bicgstab.hh  cg.hh  factory.hh  gmres.hh  krylov_interface.hh  shell.hh  solver_settings.hh  traits.hh
flecsi-linalg/solvers/test/: bicgstab.cc  cg.cc  cgmulti.cc  csr_utils.hh  gmres.cc  test_mesh.hh
flecsi-linalg/util/: future.hh  traits.hh
flecsi-linalg/vectors/: CMakeLists.txt  flecsi_vector.hh  mesh.hh  multi.hh  multivector.hh  petsc.hh  petsc_vector.hh  variable.hh  vector.hh
flecsi-linalg/vectors/data/: flecsi_data.hh  mesh.hh  petsc.hh  (+1 more)
flecsolve/: CMakeLists.txt
flecsolve/matrices/: CMakeLists.txt  coloring_utils.hh  par.hh  parcsr.hh  seq.hh
flecsolve/matrices/io/: matrix_market.hh
flecsolve/matrices/test/: par_csr.cc  parcsr.cfg
flecsolve/operators/: CMakeLists.txt  base.hh  core.hh  factory.hh  handle.hh  shell.hh  storage.hh  traits.hh
flecsolve/physics/: CMakeLists.txt
flecsolve/physics/boundary/: bc_base.hh  dirichlet.hh  neumann.hh  robin.hh
flecsolve/physics/common/: operator_base.hh  operator_utils.hh  state_store.hh  vector_types.hh
flecsolve/physics/expressions/: operator_expression.hh
flecsolve/physics/reaction/: arrhenius.hh  fkn_mechanism.hh
flecsolve/physics/specializations/: fvm_narray.hh  fvm_stencil.hh  operator_mesh.hh
flecsolve/physics/tasks/: operator_task.hh
flecsolve/physics/test/: boundaries.cc  fvm_coeff.cc  fvm_diffusion.cc  fvm_mesh.cc  test_setup.hh  volume_diffusion.cc
flecsolve/physics/volume_diffusion/: coefficient.hh  diffusion.hh  volume_diffusion.hh
flecsolve/solvers/: CMakeLists.txt  amp.cc  amp.hh  bicgstab.hh  cg.hh  factory.hh  gmres.hh  krylov_interface.hh  krylov_operator.hh  krylov_parameters.hh  nka.hh  shell.hh  solver_settings.hh  traits.hh
flecsolve/solvers/mg/: CMakeLists.txt  cg_solve.hh  coarsen.hh  cycle.hh  gs.hh  intergrid.hh  jacobi.hh  level.hh  ua.cc  ua.hh
flecsolve/solvers/mg/test/: coarsen.cc  galerkin_prod.cc  intergrid.cc  jacobi.cc  jacobi.cfg
flecsolve/solvers/test/: amp-amg.cfg  amp-diffusion-2d  amp-input  amp-solver-gmres.cfg  amp-solver-input  amp-solver-pcg.cfg  amp-solver.cfg  amp_boomeramg.cc  amp_solver.cc  bicgstab.cc  bicgstab.cfg  cg.cc  cg.cfg  cgmulti.cc  cgmulti.cfg  csr_utils.hh  gmres.cc  gmres.cfg  nka-factory.cfg  nka.cc  nka.cfg  test_mesh.hh
flecsolve/time-integrators/: CMakeLists.txt  base.hh  bdf.cc  bdf.hh  bdf_parameters.cc  bdf_parameters.hh  operator_adapter.hh  operator_interface.hh  parameters.hh  rk23.hh  rk45.hh
flecsolve/time-integrators/test/: explicit.cc  explicit.cfg  implicit.cc  implicit.cfg
flecsolve/topo/: csr.hh
flecsolve/util/: CMakeLists.txt  config.hh  future.hh  traits.hh
flecsolve/util/test/: mesh.hh
flecsolve/vectors/: CMakeLists.txt  base.hh  core.hh  mesh.hh  multi.hh  petsc.hh  seq.hh  topo_view.hh  traits.hh  util.cc  util.hh  variable.hh  vector.hh
flecsolve/vectors/data/: mesh.hh  multi.hh  petsc.hh  topo_view.hh
flecsolve/vectors/operations/: mesh.hh  mesh_tasks.hh  multi.hh  petsc.hh  petsc_tasks.hh  topo_tasks.hh  topo_view.hh
flecsolve/vectors/test/: flecsi_multivector.cc  flecsi_vector.cc  petsc.cc  test_mesh.hh
spack-repo/: repo.yaml
spack-repo/v1/: repo.yaml
src/: CMakeLists.txt  linalg.hh
(+14 files in other folders)
